--- a/src/css/PlayerBoard.scss
+++ b/src/css/PlayerBoard.scss
@@ -91,7 +91,7 @@
     color:white;
   }
 
-  .mcompact {
+.mcompact {
 
   .playerboard_header{
     width: 100%;
@@ -194,6 +194,7 @@
   .tracker.tracker_land{ background-position: -200% -100%;}
 
 .tracker.tile_8 {background-position: -400% -100%;}
+.tracker.tile_64 {background-position: -600% -100%;}
 .tracker.tile_85 {background-position: -700% -100%;}
 .tracker.tile_128 {background-position: -900% -100%;}
 .tracker.tile_123 {background-position: -1300% -100%;}
@@ -466,7 +467,10 @@
   }
 
   .viewcards_button[data-selected="0"] i {
-    visibility: hidden;
+    display: none;
+  }
+  .viewcards_button[data-selected="1"] .viewcardbutton_counter {
+    display: none;
   }
 
   /* effects face down */
@@ -477,4 +481,51 @@
   .tableau .card[data-state="3"] {
     filter: grayscale(0.9);
   }
+
+  .tableau {
+    display: grid;
+    grid-template-columns: 1fr calc(var(--card-width)*1.1);
+    grid-template-rows: 1fr 1fr;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    min-height: calc(var(--card-height)*2.1);
+  }
+
+
+
+  .cards_2a {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+  .cards_2 {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
+  .cards_1vp {
+    grid-area:  1 / 1 / 3 / 2;
+  }
+  .cards_1 {
+    grid-area: 1 / 2 / 3 / 3;
+  }
+
+  .cards_3vp {
+    grid-area:  1 / 1 / 3 / 2;
+  }
+  .cards_3 {
+    grid-area: 1 / 2 / 3 / 3;
+  }
+
+  .cards_bin{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .cards_bin.stacked {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    .card~.card {
+      margin-top: -105%;
+    }
+  }
+
 }
+
